--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Привет Курсера</title>
 </head>
 <body>
-<h1>Привет, Coursera!</h1>
+<h1>Привет, Coursera! Хороший курс</h1>
 </body>
 </html>
